--- a/NMF.ipynb
+++ b/NMF.ipynb
@@ -1,8 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Algoritmo NMF**\n",
+    "---\n",
+    "\n",
+    "### **¿Cómo funciona el NMF en un sistema de recomendación?**\n",
+    "\n",
+    "#### **Representación de los datos:**\n",
+    "Supón que tenemos una matriz \\( R \\) de **valoraciones** (ratings), donde las filas representan a los **usuarios** y las columnas representan a los **ítems**.\n",
+    "\n",
+    "Las celdas de la matriz contienen las valoraciones que los usuarios han dado a los ítems. Esta matriz es generalmente **dispersa**, ya que los usuarios solo valoran una pequeña fracción de los ítems disponibles.\n",
+    "\n",
+    "#### **Descomposición:**\n",
+    "El algoritmo NMF descompone la matriz de valoraciones \\( R \\) en dos matrices de características no negativas:\n",
+    "- **W (usuarios)**: Una matriz de características latentes de los usuarios (\\( m \\times k \\), donde \\( m \\) es el número de usuarios y \\( k \\) es el número de características latentes).\n",
+    "- **H (ítems)**: Una matriz de características latentes de los ítems (\\( k \\times n \\), donde \\( n \\) es el número de ítems).\n",
+    "\n",
+    "La descomposición completa es:\n",
+    "\\[\n",
+    "R \\approx W \\cdot H\n",
+    "\\]\n",
+    "- \\( R \\) es la matriz original de valoraciones.\n",
+    "- \\( W \\) es la matriz de usuarios con las características latentes de los usuarios.\n",
+    "- \\( H \\) es la matriz de ítems con las características latentes de los ítems.\n",
+    "\n",
+    "#### **Predicción:**\n",
+    "La idea principal de NMF es **predecir las valoraciones faltantes** en la matriz \\( R \\), es decir, aquellas celdas en las que el usuario aún no ha dado una valoración. Para ello, una vez descompuesta la matriz \\( R \\), el modelo puede usar la multiplicación de las matrices \\( W \\cdot H \\) para aproximar las valoraciones que el usuario podría dar a ítems no valorados.\n",
+    "\n",
+    "#### **Optimización:**\n",
+    "NMF realiza la descomposición de la matriz \\( R \\) de manera que las matrices \\( W \\) y \\( H \\) contienen **valores no negativos**. Esto hace que el modelo sea especialmente adecuado para tareas de recomendación, ya que las valoraciones y las características latentes no pueden ser negativas. Para obtener una buena descomposición, se optimizan los valores de \\( W \\) y \\( H \\) mediante técnicas de **optimización iterativa**, como el descenso por gradiente o la actualización de las reglas de multiplicación.\n",
+    "\n",
+    "#### **Regularización:**\n",
+    "Al igual que en otros métodos de factorización de matrices, se aplica **regularización** en NMF para evitar el sobreajuste (overfitting) a los datos de entrenamiento. La regularización penaliza la complejidad del modelo, evitando que las matrices \\( W \\) y \\( H \\) contengan valores demasiado grandes. Esto mejora la capacidad de generalización del modelo y previene el sobreajuste a las peculiaridades de los datos.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Reader Dataset**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -13,7 +58,23 @@
     "import urllib\n",
     "import random\n",
     "from scipy.special import digamma\n",
-    "from math import exp"
+    "from math import exp\n",
+    "import os\n",
+    "import random\n",
+    "import operator\n",
+    "import requests\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import sparse\n",
+    "import sys\n",
+    "from surprise import Dataset, Reader\n",
+    "from surprise import KNNBasic, SVD\n",
+    "from surprise.model_selection import train_test_split\n",
+    "from surprise import accuracy\n",
+    "from surprise.dataset import DatasetAutoFolds\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import itertools"
    ]
   },
   {
@@ -34,32 +95,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Mejor solución actual**:\n",
-    "\n",
-    "- SVD: Mejores parámetros: {'n_factors': 50, 'n_epochs': 30, 'lr_all': 0.005, 'reg_all': 0.06}. Predicciones guardadas en\n",
-    "predictions\\svd_gridsearch\\predictions_svd.csv. MAE: 1.260\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reader Dataset "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df_train = pd.read_csv('train.csv', sep=',', index_col=False)\n",
-    "df_test = pd.read_csv('test.csv', sep=',', index_col=False)\n"
+    "df_test = pd.read_csv('test.csv', sep=',', index_col=False)"
    ]
   },
   {
@@ -148,30 +192,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import random\n",
-    "import operator\n",
-    "import requests\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from scipy import sparse\n",
-    "import sys\n",
-    "from surprise import Dataset, Reader\n",
-    "from surprise import KNNBasic, SVD\n",
-    "from surprise.model_selection import train_test_split\n",
-    "from surprise import accuracy\n",
-    "from surprise.dataset import DatasetAutoFolds\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import itertools"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -220,216 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SVD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x1fecbe35b20>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "algo = SVD()\n",
-    "algo.fit(trainset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = algo.test(testset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE:  0.7635\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.7634623190271725"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy.mae(predictions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Exportacion de predicciones.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(3891, 81714, 10.0),\n",
-       " (49435, 77613, 8.0),\n",
-       " (38654, 112871, 6.0),\n",
-       " (69560, 55505, 10.0),\n",
-       " (69799, 28638, 9.0)]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "testset[0:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solution = []\n",
-    "\n",
-    "for _, row in df_test.iterrows():\n",
-    "    user = row['user']\n",
-    "    item = row['item']\n",
-    "    \n",
-    "    pred = algo.predict(user, item).est  # Predicción de rating\n",
-    "    solution.append([row['ID'], pred])\n",
-    "\n",
-    "solution_df = pd.DataFrame(solution, columns=[\"ID\", \"rating\"])\n",
-    "\n",
-    "solution_df.to_csv('predictions_svd.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Pruebas SVD ajustando hiperparametros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  1.2min\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed: 10.6min\n",
-      "[Parallel(n_jobs=-1)]: Done 243 out of 243 | elapsed: 15.0min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mejores parámetros: {'n_factors': 50, 'n_epochs': 30, 'lr_all': 0.005, 'reg_all': 0.06}\n",
-      "Predicciones guardadas en svd_gridsearch\\predictions_svd.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from surprise import Dataset, Reader, SVD\n",
-    "from surprise.model_selection import GridSearchCV\n",
-    "\n",
-    "output_dir = \"predictions/svd_gridsearch\"\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
-    "\n",
-    "# Configurar el rango de ratings\n",
-    "reader = Reader(rating_scale=(df_train[\"rating\"].min(), df_train[\"rating\"].max()))\n",
-    "data = Dataset.load_from_df(df_train[['user', 'item', 'rating']], reader)\n",
-    "\n",
-    "param_grid = {\n",
-    "    \"n_factors\": [50, 100, 150],     # Aumentar complejidad\n",
-    "    \"n_epochs\": [20, 30, 50],        # Más iteraciones para mejor convergencia\n",
-    "    \"lr_all\": [0.002, 0.005, 0.01],  # Ajuste de tasa de aprendizaje\n",
-    "    \"reg_all\": [0.02, 0.04, 0.06],   # Regularización para evitar overfitting\n",
-    "}\n",
-    "\n",
-    "grid_search = GridSearchCV(SVD, param_grid, measures=[\"mae\"], cv=3, n_jobs=-1, joblib_verbose=1)\n",
-    "grid_search.fit(data)\n",
-    "\n",
-    "best_params = grid_search.best_params[\"mae\"]\n",
-    "print(f\"Mejores parámetros: {best_params}\")\n",
-    "\n",
-    "### ENTRENO  EL MEJOR MODELO CON TODOS LOS DATOS\n",
-    "best_svd = SVD(**best_params, random_state=42)\n",
-    "trainset = data.build_full_trainset()\n",
-    "best_svd.fit(trainset)\n",
-    "\n",
-    "solution = []\n",
-    "for _, row in df_test.iterrows():\n",
-    "    user = row[\"user\"]\n",
-    "    item = row[\"item\"]\n",
-    "    pred = best_svd.predict(user, item).est\n",
-    "    solution.append([row[\"ID\"], pred])\n",
-    "\n",
-    "# Guardar predicciones en CSV\n",
-    "output_file = os.path.join(output_dir, \"predictions_svd.csv\")\n",
-    "solution_df = pd.DataFrame(solution, columns=[\"ID\", \"rating\"])\n",
-    "solution_df.to_csv(output_file, index=False)\n",
-    "\n",
-    "print(f\"Predicciones guardadas en {output_file}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## NMF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainset = data.build_full_trainset()"
+    "## **Algoritmo**"
    ]
   },
   {
@@ -647,19 +458,15 @@
     "from surprise import Dataset, Reader, NMF\n",
     "from surprise.model_selection import GridSearchCV\n",
     "\n",
-    "# Crear el directorio donde se guardarán los archivos\n",
     "output_dir = \"nmf_gridsearch\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Cargar datos\n",
-    "df_train = pd.read_csv(\"train.csv\")  # Reemplaza con tu archivo real\n",
-    "df_test = pd.read_csv(\"test.csv\")  # Reemplaza con tu archivo real\n",
+    "df_train = pd.read_csv(\"train.csv\")  \n",
+    "df_test = pd.read_csv(\"test.csv\")\n",
     "\n",
-    "# Configurar el rango de ratings\n",
     "reader = Reader(rating_scale=(df_train[\"rating\"].min(), df_train[\"rating\"].max()))\n",
     "data = Dataset.load_from_df(df_train[['user', 'item', 'rating']], reader)\n",
     "\n",
-    "# Definir la malla de hiperparámetros para NMF\n",
     "param_grid = {\n",
     "    \"n_factors\": [10, 15, 20],\n",
     "    \"n_epochs\": [30, 50, 70],\n",
@@ -667,11 +474,10 @@
     "    \"reg_qi\": [0.04, 0.06, 0.08],\n",
     "}\n",
     "\n",
-    "# Ejecutar Grid Search\n",
+    "# Grid Search\n",
     "grid_search = GridSearchCV(NMF, param_grid, measures=[\"mae\"], cv=3, n_jobs=-1)\n",
     "grid_search.fit(data)\n",
     "\n",
-    "# Obtener los mejores parámetros\n",
     "best_params = grid_search.best_params[\"mae\"]\n",
     "print(f\"Mejores parámetros: {best_params}\")\n",
     "\n",
@@ -680,7 +486,6 @@
     "trainset = data.build_full_trainset()\n",
     "best_nmf.fit(trainset)\n",
     "\n",
-    "# Generar predicciones para df_test\n",
     "solution = []\n",
     "for _, row in df_test.iterrows():\n",
     "    user = row[\"user\"]\n",
@@ -688,20 +493,12 @@
     "    pred = best_nmf.predict(user, item).est\n",
     "    solution.append([row[\"ID\"], pred])\n",
     "\n",
-    "# Guardar predicciones en CSV\n",
     "solution_df = pd.DataFrame(solution, columns=[\"ID\", \"rating\"])\n",
     "output_file = os.path.join(output_dir, \"predictions_nmf.csv\")\n",
     "solution_df.to_csv(output_file, index=False)\n",
     "\n",
     "print(f\"Predicciones guardadas en {output_file}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
