Whitebox attack to GradientBostclassifier

--- a/Tournament.ipynb
+++ b/Tournament.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -348,17 +348,17 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  1.2min\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed: 10.6min\n",
-      "[Parallel(n_jobs=-1)]: Done 243 out of 243 | elapsed: 15.0min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  3.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed: 26.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 243 out of 243 | elapsed: 40.8min finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mejores parámetros: {'n_factors': 50, 'n_epochs': 30, 'lr_all': 0.005, 'reg_all': 0.06}\n",
-      "Predicciones guardadas en svd_gridsearch\\predictions_svd.csv\n"
+      "Mejores parámetros: {'n_factors': 200, 'n_epochs': 80, 'lr_all': 0.003, 'reg_all': 0.05}\n",
+      "Predicciones guardadas en predictions/svd_gridsearch\\predictions_svd.csv\n"
      ]
     }
    ],
@@ -377,10 +377,10 @@
     "data = Dataset.load_from_df(df_train[['user', 'item', 'rating']], reader)\n",
     "\n",
     "param_grid = {\n",
-    "    \"n_factors\": [50, 100, 150],     # Aumentar complejidad\n",
-    "    \"n_epochs\": [20, 30, 50],        # Más iteraciones para mejor convergencia\n",
-    "    \"lr_all\": [0.002, 0.005, 0.01],  # Ajuste de tasa de aprendizaje\n",
-    "    \"reg_all\": [0.02, 0.04, 0.06],   # Regularización para evitar overfitting\n",
+    "    \"n_factors\": [200, 300, 500],    # Mantener alta capacidad\n",
+    "    \"n_epochs\": [50, 80, 100],       # Menos epochs para evitar overfitting\n",
+    "    \"lr_all\": [0.001, 0.003, 0.005], # Tasas de aprendizaje controladas\n",
+    "    \"reg_all\": [0.05, 0.1, 0.2],     # Regularización suave para evitar sobreajuste\n",
     "}\n",
     "\n",
     "grid_search = GridSearchCV(SVD, param_grid, measures=[\"mae\"], cv=3, n_jobs=-1, joblib_verbose=1)\n",
