--- a/NMF.ipynb
+++ b/NMF.ipynb
@@ -5,10 +5,16 @@
    "metadata": {},
    "source": [
     "# **Algoritmo NMF**\n",
+    "\n",
+    "**Miembros del grupo JAP:**\n",
+    "1. Anny Álvarez Nogales\n",
+    "2. Paula Arias Fernández\n",
+    "3. Jorge del Castillo Gómez\n",
     "---\n",
     "\n",
     "### **¿Cómo funciona el NMF en un sistema de recomendación?**\n",
     "\n",
+    "Apuntes:\n",
     "#### **Representación de los datos:**\n",
     "Supón que tenemos una matriz \\( R \\) de **valoraciones** (ratings), donde las filas representan a los **usuarios** y las columnas representan a los **ítems**.\n",
     "\n",
@@ -16,19 +22,19 @@
     "\n",
     "#### **Descomposición:**\n",
     "El algoritmo NMF descompone la matriz de valoraciones \\( R \\) en dos matrices de características no negativas:\n",
-    "- **W (usuarios)**: Una matriz de características latentes de los usuarios (\\( m \\times k \\), donde \\( m \\) es el número de usuarios y \\( k \\) es el número de características latentes).\n",
-    "- **H (ítems)**: Una matriz de características latentes de los ítems (\\( k \\times n \\), donde \\( n \\) es el número de ítems).\n",
+    "- **W (usuarios)**: Una matriz de características latentes de los usuarios (\\( m \\ k \\), donde \\( m \\) es el número de usuarios y \\( k \\) es el número de características latentes).\n",
+    "- **H (ítems)**: Una matriz de características latentes de los ítems (\\( k \\ n \\), donde \\( n \\) es el número de ítems).\n",
     "\n",
     "La descomposición completa es:\n",
     "\\[\n",
-    "R \\approx W \\cdot H\n",
+    "R = W dot H\n",
     "\\]\n",
     "- \\( R \\) es la matriz original de valoraciones.\n",
     "- \\( W \\) es la matriz de usuarios con las características latentes de los usuarios.\n",
     "- \\( H \\) es la matriz de ítems con las características latentes de los ítems.\n",
     "\n",
     "#### **Predicción:**\n",
-    "La idea principal de NMF es **predecir las valoraciones faltantes** en la matriz \\( R \\), es decir, aquellas celdas en las que el usuario aún no ha dado una valoración. Para ello, una vez descompuesta la matriz \\( R \\), el modelo puede usar la multiplicación de las matrices \\( W \\cdot H \\) para aproximar las valoraciones que el usuario podría dar a ítems no valorados.\n",
+    "La idea principal de NMF es **predecir las valoraciones faltantes** en la matriz \\( R \\), es decir, aquellas celdas en las que el usuario aún no ha dado una valoración. Para ello, una vez descompuesta la matriz \\( R \\), el modelo puede usar la multiplicación de las matrices \\( W dot H \\) para aproximar las valoraciones que el usuario podría dar a ítems no valorados.\n",
     "\n",
     "#### **Optimización:**\n",
     "NMF realiza la descomposición de la matriz \\( R \\) de manera que las matrices \\( W \\) y \\( H \\) contienen **valores no negativos**. Esto hace que el modelo sea especialmente adecuado para tareas de recomendación, ya que las valoraciones y las características latentes no pueden ser negativas. Para obtener una buena descomposición, se optimizan los valores de \\( W \\) y \\( H \\) mediante técnicas de **optimización iterativa**, como el descenso por gradiente o la actualización de las reglas de multiplicación.\n",
@@ -330,8 +336,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusión**: el resultado 1.77 (MAE) de NMF se aleja de los resultados presentados en SVD."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -423,8 +436,6 @@
     "algo.fit(trainset)\n",
     "predictions = algo.test(testset)\n",
     "\n",
-    "# accuracy.mae(predictions)\n",
-    "\n",
     "solution = []\n",
     "\n",
     "for _, row in df_test.iterrows():\n",
@@ -481,7 +492,7 @@
     "best_params = grid_search.best_params[\"mae\"]\n",
     "print(f\"Mejores parámetros: {best_params}\")\n",
     "\n",
-    "# Entrenar el mejor modelo con todos los datos\n",
+    "# entrenO el mejor modelo con todos los datos\n",
     "best_nmf = NMF(**best_params, random_state=42)\n",
     "trainset = data.build_full_trainset()\n",
     "best_nmf.fit(trainset)\n",
