--- a/Contenido/Tournament_2.ipynb
+++ b/Contenido/Tournament_2.ipynb
@@ -18,6 +18,7 @@
     "1. TF-IDF:\n",
     "    - TFIDF + LogisticRegression -  `MAE: 0.65`\n",
     "    - TFIDF + RandomForestRegression - `MAE: 0.82`\n",
+    "    - TFIDF + xgboost [HACER] - `MAE: -`\n",
     "2. Doc2Vec + LogisticRegression - `MAE: 1.24`\n",
     "3. [HACER]"
    ]
