--- a/Contenido/Tournament_2.ipynb
+++ b/Contenido/Tournament_2.ipynb
@@ -18,7 +18,7 @@
     "1. TF-IDF:\n",
     "    - TFIDF + LogisticRegression -  `MAE: 0.65`\n",
     "    - TFIDF + RandomForestRegression - `MAE: 0.82`\n",
-    "    - TFIDF + xgboost [HACER] - `MAE: -`\n",
+    "    - TFIDF + xgboost [HACER] - `MAE: - 0.65`\n",
     "2. Doc2Vec + LogisticRegression - `MAE: 1.24`\n",
     "3. [HACER]"
    ]
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "3093c507",
    "metadata": {},
    "outputs": [],
@@ -504,6 +504,69 @@
     "})\n",
     "\n",
     "submission_df.to_csv('prediction_tfidf_randomForest.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d079e7f",
+   "metadata": {},
+   "source": [
+    "**Con un clasificador xgboost**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9d6b28c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install xgboost --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6811aef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\34627\\anaconda3\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [10:15:46] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "y = df_train['stars'].astype(int) - 1\n",
+    "\n",
+    "model = XGBClassifier(n_estimators=100, use_label_encoder=False, eval_metric='mlogloss', random_state=42, n_jobs=-1)\n",
+    "model.fit(X_train_tfidf, y)\n",
+    "\n",
+    "y_pred_test = model.predict(X_test_tfidf) + 1\n",
+    "\n",
+    "submission_df = pd.DataFrame({\n",
+    "    'review_id': df_test['review_id'],\n",
+    "    'stars': y_pred_test\n",
+    "})\n",
+    "\n",
+    "submission_df.to_csv('prediction_tfidf_xgboost.csv', index=False)"
    ]
   },
   {
