--- a/Contenido/Experiments_1.ipynb
+++ b/Contenido/Experiments_1.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **SISTEMAS DE RECOMENDACIÓN**\n",
+    "\n",
+    "## **Filtrado Basado en Contenido**\n",
+    "\n",
+    "\n",
+    "Miembros del Grupo:\n",
+    "- Paula Arias Fernández\n",
+    "- Jorge del Castillo Gómez\n",
+    "- Anny Álvarez Nogales"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
