--- a/Contenido/Experiments_2.ipynb
+++ b/Contenido/Experiments_2.ipynb
@@ -5,7 +5,15 @@
    "id": "ef06c300",
    "metadata": {},
    "source": [
-    "# **Filtrado basado en Contenido**"
+    "# **SISTEMAS DE RECOMENDACIÓN**\n",
+    "\n",
+    "## **Filtrado Basado en Contenido**\n",
+    "\n",
+    "\n",
+    "Miembros del Grupo:\n",
+    "- Paula Arias Fernández\n",
+    "- Jorge del Castillo Gómez\n",
+    "- Anny Álvarez Nogales"
    ]
   },
   {
@@ -13,14 +21,13 @@
    "id": "80fe7713",
    "metadata": {},
    "source": [
-    "## Estrategias\n",
+    "## Estrategias implementadas en este cuaderno\n",
     "\n",
     "1. TF-IDF:\n",
     "    - TFIDF + LogisticRegression -  `MAE: 0.65`\n",
     "    - TFIDF + RandomForestRegression - `MAE: 0.82`\n",
-    "    - TFIDF + xgboost [HACER] - `MAE: - 0.65`\n",
-    "2. Doc2Vec + LogisticRegression - `MAE: 1.24`\n",
-    "3. [HACER]"
+    "    - TFIDF + xgboost - `MAE: - 0.65`\n",
+    "2. Doc2Vec + LogisticRegression - `MAE: 1.24`"
    ]
   },
   {
