Comments on v2 and v3

--- a/Contenido/Tournament_2_v2.ipynb
+++ b/Contenido/Tournament_2_v2.ipynb
@@ -9,6 +9,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3534c84",
+   "metadata": {},
+   "source": [
+    "**Preprocesamiento de los datos**\n",
+    "- Unión de las 3 tablas: reviews, users y bussinesses\n",
+    "- Adición de columnas como ```elite_years``` y ```categories```.\n",
+    "\n",
+    "**Procesamiento de los textos de las reviews**\n",
+    "- TF-IDF con ```max_features=5000``` y 1-gramas\n",
+    "- Word2Vec con ```vector_size=100```.\n",
+    "\n",
+    "**Modelo**\n",
+    "- Light GBM\n",
+    "- LightGBM optimizado con RandomizedSearch \n",
+    "- LightGBM optimizado con Optuna"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "11a37426",
