--- a/Contenido/Experiments_3.ipynb
+++ b/Contenido/Experiments_3.ipynb
@@ -2,10 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53e0e350",
+   "id": "7b45e8a3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd1a61b0",
    "metadata": {},
    "source": [
-    "# Filtrado basado en contenido"
+    "# **SISTEMAS DE RECOMENDACIÓN**\n",
+    "\n",
+    "## **Filtrado Basado en Contenido**\n",
+    "\n",
+    "\n",
+    "Miembros del Grupo:\n",
+    "- Paula Arias Fernández\n",
+    "- Jorge del Castillo Gómez\n",
+    "- Anny Álvarez Nogales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e4014b",
+   "metadata": {},
+   "source": [
+    "## Estrategias implementadas en este cuaderno"
    ]
   },
   {
