--- a/Contenido/Experiments_4.ipynb
+++ b/Contenido/Experiments_4.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53e0e350",
+   "id": "439bac83",
    "metadata": {},
    "source": [
-    "# Filtrado basado en contenido"
+    "# **SISTEMAS DE RECOMENDACIÓN**\n",
+    "\n",
+    "## **Filtrado Basado en Contenido**\n",
+    "\n",
+    "\n",
+    "Miembros del Grupo:\n",
+    "- Paula Arias Fernández\n",
+    "- Jorge del Castillo Gómez\n",
+    "- Anny Álvarez Nogales"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da3ad541",
+   "id": "a403b420",
    "metadata": {},
    "source": [
-    "Este notebook se dedica a la ejecución de las técnicas con el modelo LightGBM."
+    "## Estrategias implementadas en este cuaderno"
    ]
   },
   {
